# rgbmvp

./: .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.public  README.md  docker-compose.yml  pyproject.toml  rust-toolchain.toml
.github/workflows/: ci.yml  deploy-cloudrun.yml  deploy-vercel.yml  docker-public.yml
artifacts/public/: README.md  manifest.json  s3-browser-20260724.json  s3-rgbmvp-live.json
crates/lab-api/: Cargo.toml
crates/lab-api/src/: lib.rs  s3.rs  services.rs  swap_view.rs
crates/lab-btc/: Cargo.toml
crates/lab-btc/src/: lib.rs
crates/lab-chain/: Cargo.toml
crates/lab-chain/src/: lib.rs
crates/lab-cli/: Cargo.toml
crates/lab-cli/src/: http_api.rs  labd_axum.rs  labd_legacy.rs  main.rs
crates/lab-core/: Cargo.toml
crates/lab-core/src/: lib.rs  security.rs
crates/lab-rgb/: Cargo.toml
crates/lab-rgb/src/: bfa.rs  htlc.rs  lib.rs  mint.rs  rgb20.rs  seal.rs  storage.rs  swap.rs  tapret_addr.rs
crates/lab-simplicity/: Cargo.toml
crates/lab-simplicity/programs/: mint_gate_covenant.simf  rgb_anchor_covenant.simf  stake_covenant.simf
crates/lab-simplicity/src/: lib.rs
deploy/: README.md  cloudrun.yaml  vercel.json
docker/: elements-simplicity.conf  elements.conf
docs/: ARCHITECTURE.md  C0_CLOSED.md  C1_CLOSED.md  C2_CLOSED.md  C3_CLOSED.md  C4_CLOSED.md  C5_LIQUIDEX_COMPARISON.md  DEV_PLAN.md  HEADLESS.md  M2M.md  MANIFESTO.md  P1_CLOSED.md  P1_SWAP_PLAN.md  P2_CLOSED.md  P2_PLAN.md  P2_SIMPLICITY.md  P3_CLOSED.md  P3_PLAN.md  PROJECT_MEMORY.md  PUBLIC_LAUNCH.md  PURPOSE_AND_USAGE.md  ROADMAP_NEXT.md  S3_RGB_WRAP.md  SCENARIOS.md  STACK.md  TESTNET_WALLETS.md  U4_PUBLIC_HOSTING.md  U5_AXUM.md  WALLETS.md  WITNESS_TX.md
fixtures/: testnet_btc.json  testnet_wallets.json
programs/simplicity/: README.md
scripts/: bootstrap_testnet_wallets.sh  demo_c0_simplicity.sh  demo_c1_mint_gate.sh  demo_c2_mint_gate_burn.sh  demo_c3_bfa_audit.sh  demo_c4_stake.sh  project_memory.py  regtest_simplicity.sh
src/rgbmvp/: __init__.py  config.py  health.py
tests/: test_health.py  test_project_memory.py
web/: audit.html  demo.html  index.html  status.html
