[workspace]
resolver = "2"
members = [
    "crates/lab-core",
    "crates/lab-chain",
    "crates/lab-api",
    "crates/lab-cli",
    "crates/lab-rgb",
    "crates/lab-btc",
    "vendor/rgb-consensus-patched",
]

# RGB stack must use the WitnessTx-patched consensus (from kaleidoswap spike).
[patch.crates-io]
rgb-consensus = { path = "vendor/rgb-consensus-patched" }

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
rust-version = "1.85"
repository = "https://github.com/kestl/rgbmvp"

[workspace.dependencies]
anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive", "env"] }
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
lwk_wollet = "0.18.1"
lwk_signer = "0.18.1"
lwk_common = "0.18.1"
lab-core = { path = "crates/lab-core" }
lab-chain = { path = "crates/lab-chain" }
lab-api = { path = "crates/lab-api" }
lab-rgb = { path = "crates/lab-rgb" }
lab-btc = { path = "crates/lab-btc" }
hex = "0.4"
bitcoin = { version = "0.32", features = ["std", "serde"] }
# elements version: keep aligned with LWK 0.18 (0.25.x)

[profile.dev]
opt-level = 1
