[package]
name = "lab-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rgbmvp command-line interface"
default-run = "rgbmvp"

[[bin]]
name = "rgbmvp"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap.workspace = true
lab-api.workspace = true
lab-chain.workspace = true
lab-core.workspace = true
lab-rgb.workspace = true
lab-btc.workspace = true
serde.workspace = true
serde_json.workspace = true
hex.workspace = true
bitcoin.workspace = true
