[package]
name = "lab-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "rgbmvp shared config, types, and health payloads"

[dependencies]
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
dotenvy.workspace = true
